<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/detailTitle"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="?android:attr/homeAsUpIndicator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detailTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="20dp"
                            android:text="@string/detailTitle"
                            android:textAlignment="center"
                            android:textColor="@color/purpleHighlight"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:paddingHorizontal="40dp"
                            android:layout_height="200dp"
                            android:id="@+id/detailImage"
                            android:layout_marginTop="20dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/astatine_detail"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/detailTitle"
                            android:contentDescription="@string/imageDetail" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/detailDesc"
                            android:layout_marginTop="20dp"
                            android:text="@string/astatine"
                            android:textColor="@color/white"
                            android:textAlignment="viewStart"
                            android:textSize="20sp"
                            android:padding="12dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/detailImage" />

                </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
